Добавляет обертку с тенью для десктопной версии сайта

--- a/source/index.html
+++ b/source/index.html
@@ -7,128 +7,124 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
-    <header class="page-header">
-      <nav class="page-header__main-nav main-nav main-nav--opened main-nav--nojs">
-        <a class="main-nav__logo logo">
-          <img class="logo__image" src="./img/logo.svg" width="185" height="96" alt="Логотип города Седона">
-        </a>
-        <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
-        <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--active">
-            <a class="main-nav__link">Главная</a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="catalog.html">Фото и видео</a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">Форма отзыва</a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          </li>
-        </ul>
-        <div class="page-header__promo promo">
-          <img class="promo__slogan-image" src="./img/slogan-index.svg" width="282" height="214" alt="Welcome to the Gorgeous. Sedona. Because the Grand Canyon sucks!">
-        </div>
-      </nav>
-    </header>
-
-    <main class="main">
-
-      <h1 class="main__page-title title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h1>
-      <section class="features">
-        <div class="features__wrapper">
-          <p class="features__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-          <ol class="features__list">
-            <li class="features__item features__item--blue-theme features__item--pattern">
-              <h2 class="features__subtitle features__subtitle--blue-theme title">Настоящий городок</h2>
-              <p class="features__number">№1</p>
-              <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
-              <img class="features__image" src="./img/photo-city.jpg" width="320" height="260" alt="Фото города Седона">
-              <ul class="features__list-benefits benefits">
-                <li class="benefits__item benefits__item--house">
-                  <h3 class="benefits__title title">Жилье</h3>
-                  <p class="benefits__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-                </li>
-                <li class="benefits__item benefits__item--food">
-                  <h3 class="benefits__title title">Еда</h3>
-                  <p class="benefits__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-                </li>
-                <li class="benefits__item benefits__item--gift">
-                  <h3 class="benefits__title title">Сувениры</h3>
-                  <p class="benefits__description">Не только китайского, но и местного производства!</p>
-                </li>
-              </ul>
-            </li>
-            <li class="features__item features__item--blue-theme">
-              <h2 class="features__subtitle features__subtitle--blue-theme title">Там есть Мост Дьявола</h2>
-              <p class="features__number">№2</p>
-              <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-              <img class="features__image features__image--other-order" src="./img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
-            </li>
-            <li class="features__item features__item--gray-theme features__item--underline">
-              <h2 class="features__subtitle title">Небольшая площадь</h2>
-              <p class="features__number">№3</p>
-              <p class="features__description">Все интересные места находятся очень близко</p>
-            </li>
-            <li class="features__item features__item--gray-theme features__item--underline">
-              <h2 class="features__subtitle title">Красивая дорога</h2>
-              <p class="features__number">№4</p>
-              <p class="features__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-            </li>
-            <li class="features__item features__item--gray-theme">
-              <h2 class="features__subtitle title">Мало туристов</h2>
-              <p class="features__number">№5</p>
-              <p class="features__description">Большинство едет в Гранд Каньон и толпится там</p>
-            </li>
-          </ol>
-        </div>
-      </section>
-
-      <section class="service">
-        <div class="service__wrapper">
-          <h2 class="service__title title">Заинтересовались?</h2>
-          <p class="service__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="service__find-hotel-link" href="#" target="_blank">Найти гостиницу</a>
-        </div>
-      </section>
-
-      <section class="map">
-        <div class="map__wrapper">
-          <img class="map__image" src="./img/map-mobile.jpg" width="320" height="350" alt="Месторасположение города Седона: США, штат Аризона">
-        </div>
-      </section>
-
-    </main>
-
-    <footer class="footer">
-      <div class="footer__wrapper">
-        <p class="footer__hashtag"><b>#visitsedona</b></p>
-        <ul class="footer__list social">
-          <li class="social__item">
-            <a class="social__link social__link--vk" href="#">
-              <img class="social__icon social__icon--vk" src="./img/icon-vk.svg" width="24" height="14" alt="Vkontakte">
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--telegram" href="#">
-              <img class="social__icon social__icon--telegram" src="./img/icon-telegram.svg" width="21" height="17.6" alt="Telegram">
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="#">
-              <img class="social__icon social__icon--youtube" src="./img/icon-youtube.svg" width="20" height="14" alt="Youtube">
-            </a>
-          </li>
-        </ul>
-        <div class="footer__copyright copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
-            Разработано
-            <img class="copyright__icon" src="./img/icon-htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy"></img>
+    <div class="page__wrapper">
+      <header class="page-header">
+        <nav class="page-header__main-nav main-nav main-nav--opened main-nav--nojs">
+          <a class="main-nav__logo logo">
+            <img class="logo__image" src="./img/logo.svg" width="185" height="96" alt="Логотип города Седона">
           </a>
+          <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
+          <ul class="main-nav__list">
+            <li class="main-nav__item main-nav__item--active">
+              <a class="main-nav__link">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="catalog.html">Фото и видео</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="form.html">Форма отзыва</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+            </li>
+          </ul>
+          <div class="page-header__promo promo">
+            <img class="promo__slogan-image" src="./img/slogan-index.svg" width="282" height="214" alt="Welcome to the Gorgeous. Sedona. Because the Grand Canyon sucks!">
+          </div>
+        </nav>
+      </header>
+      <main class="main">
+        <h1 class="main__page-title title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h1>
+        <section class="features">
+          <div class="features__wrapper">
+            <p class="features__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+            <ol class="features__list">
+              <li class="features__item features__item--blue-theme features__item--pattern">
+                <h2 class="features__subtitle features__subtitle--blue-theme title">Настоящий городок</h2>
+                <p class="features__number">№1</p>
+                <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
+                <img class="features__image" src="./img/photo-city.jpg" width="320" height="260" alt="Фото города Седона">
+                <ul class="features__list-benefits benefits">
+                  <li class="benefits__item benefits__item--house">
+                    <h3 class="benefits__title title">Жилье</h3>
+                    <p class="benefits__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                  </li>
+                  <li class="benefits__item benefits__item--food">
+                    <h3 class="benefits__title title">Еда</h3>
+                    <p class="benefits__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                  </li>
+                  <li class="benefits__item benefits__item--gift">
+                    <h3 class="benefits__title title">Сувениры</h3>
+                    <p class="benefits__description">Не только китайского, но и местного производства!</p>
+                  </li>
+                </ul>
+              </li>
+              <li class="features__item features__item--blue-theme">
+                <h2 class="features__subtitle features__subtitle--blue-theme title">Там есть Мост Дьявола</h2>
+                <p class="features__number">№2</p>
+                <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+                <img class="features__image features__image--other-order" src="./img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
+              </li>
+              <li class="features__item features__item--gray-theme features__item--underline">
+                <h2 class="features__subtitle title">Небольшая площадь</h2>
+                <p class="features__number">№3</p>
+                <p class="features__description">Все интересные места находятся очень близко</p>
+              </li>
+              <li class="features__item features__item--gray-theme features__item--underline">
+                <h2 class="features__subtitle title">Красивая дорога</h2>
+                <p class="features__number">№4</p>
+                <p class="features__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
+              <li class="features__item features__item--gray-theme">
+                <h2 class="features__subtitle title">Мало туристов</h2>
+                <p class="features__number">№5</p>
+                <p class="features__description">Большинство едет в Гранд Каньон и толпится там</p>
+              </li>
+            </ol>
+          </div>
+        </section>
+        <section class="service">
+          <div class="service__wrapper">
+            <h2 class="service__title title">Заинтересовались?</h2>
+            <p class="service__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <a class="service__find-hotel-link" href="#" target="_blank">Найти гостиницу</a>
+          </div>
+        </section>
+        <section class="map">
+          <div class="map__wrapper">
+            <img class="map__image" src="./img/map-mobile.jpg" width="320" height="350" alt="Месторасположение города Седона: США, штат Аризона">
+          </div>
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="footer__wrapper">
+          <p class="footer__hashtag"><b>#visitsedona</b></p>
+          <ul class="footer__list social">
+            <li class="social__item">
+              <a class="social__link social__link--vk" href="#">
+                <img class="social__icon social__icon--vk" src="./img/icon-vk.svg" width="24" height="14" alt="Vkontakte">
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--telegram" href="#">
+                <img class="social__icon social__icon--telegram" src="./img/icon-telegram.svg" width="21" height="17.6" alt="Telegram">
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="#">
+                <img class="social__icon social__icon--youtube" src="./img/icon-youtube.svg" width="20" height="14" alt="Youtube">
+              </a>
+            </li>
+          </ul>
+          <div class="footer__copyright copyright">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
+              Разработано
+              <img class="copyright__icon" src="./img/icon-htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy"></img>
+            </a>
+          </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
 
     <script src="js/main-nav.js"></script>
   </body>
