Добавляет адаптивную сетку для страницы Форм

--- a/source/form.html
+++ b/source/form.html
@@ -83,7 +83,7 @@
                 </ul>
               </fieldset>
               <fieldset class="form__block form__checklist">
-                <legend class="form__title title">Посещенные достопримечательности:</legend>
+                <legend class="form__title title">Посещенные<br>достопримечательности:</legend>
                 <ul class="form__list">
                   <li class="form__item">
                     <input class="form__checkbox form__checkbox--checked" id="devil-bridge" type="checkbox" name="devil-bridge" checked>
