--- a/5/catalog.html
+++ b/5/catalog.html
@@ -101,9 +101,13 @@
               <div class="video-presentation__wrapper">
                   <h2 class="video-presentation__title title">Все еще сомневаетесь?</h2>
                   <p class="video-presentation__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-                  <div class="video-presentation__box">
-                    <img class="video-presentation__video-file" src="./img/video-mobile.jpg" width="280" height="177" alt="Видео-презентация о городе Седона">
-                  </div>
+                  <button class="video-presentation__button">
+                    <span class="video-presentation__play">Воспроизвести</span>
+                  </button>
+                  <video class="video-presentation__video-file" width="280" height="177" poster="./img/video-mobile.jpg">
+                    #shadow-root (user-agent)
+                    "Your browser doesn`t support HTML5 video tag. "
+                  </video>
               </div>
           </section>
       </main>
