:heavy_check_mark: Сборка #5

--- a/5/index.html
+++ b/5/index.html
@@ -42,7 +42,7 @@
             <ol class="features__list">
               <li class="features__item features__item--blue-theme features__item--pattern">
                 <h2 class="features__subtitle features__subtitle--blue-theme title">Настоящий городок</h2>
-                <p class="features__number">№1</p>
+                <p class="features__number">— №1 —</p>
                 <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
                 <img class="features__image" src="./img/photo-city.jpg" width="320" height="260" alt="Фото города Седона">
                 <ul class="features__list-benefits benefits">
@@ -62,23 +62,23 @@
               </li>
               <li class="features__item features__item--blue-theme">
                 <h2 class="features__subtitle features__subtitle--blue-theme title">Там есть Мост Дьявола</h2>
-                <p class="features__number">№2</p>
+                <p class="features__number">— №2 —</p>
                 <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
                 <img class="features__image features__image--other-order" src="./img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
               </li>
-              <li class="features__item features__item--gray-theme features__item--underline">
-                <h2 class="features__subtitle title">Небольшая площадь</h2>
-                <p class="features__number">№3</p>
+              <li class="features__item features__item--gray-theme">
+                <h2 class="features__subtitle features__subtitle--underline title">Небольшая площадь</h2>
+                <p class="features__number">— №3 —</p>
                 <p class="features__description">Все интересные места находятся очень близко</p>
               </li>
-              <li class="features__item features__item--gray-theme features__item--underline">
-                <h2 class="features__subtitle title">Красивая дорога</h2>
-                <p class="features__number">№4</p>
-                <p class="features__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <li class="features__item features__item--gray-theme">
+                <h2 class="features__subtitle features__subtitle--underline title">Красивая дорога</h2>
+                <p class="features__number">— №4 —</p>
+                <p class="features__description">Ехать в Седону из Лас-&nbspВегаса совсем не&nbspскучно!</p>
               </li>
               <li class="features__item features__item--gray-theme">
                 <h2 class="features__subtitle title">Мало туристов</h2>
-                <p class="features__number">№5</p>
+                <p class="features__number">— №5 —</p>
                 <p class="features__description">Большинство едет в Гранд Каньон и толпится там</p>
               </li>
             </ol>
