Добавляет ретиновые и кадрированные изображения в папку img

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -40,7 +40,9 @@
             <div class="photo-gallery__wrapper">
               <article class="photo-gallery__item">
                 <a class="photo-gallery__link" href="#" target="_blank">
-                  <img class="photo-gallery__item-image" src="./img/gallery-photo-road-mobile.jpg" width="280" height="280" alt="Фотография дороги">
+                  <picture>
+                    <img class="photo-gallery__item-image" src="./img/gallery-photo-road-mobile@1x.jpg" srcset="./img/gallery-photo-road-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография дороги">
+                  </picture>
                 </a>
                 <div class="photo-gallery__item-info">
                   <div class="photo-gallery__caption">
@@ -54,7 +56,7 @@
               </article>
               <article class="photo-gallery__item">
                 <a class="photo-gallery__link" href="#" target="_blank">
-                  <img class="photo-gallery__item-image" src="./img/gallery-photo-plant-mobile.jpg" width="280" height="280" alt="Фотография растения">
+                  <img class="photo-gallery__item-image" src="./img/gallery-photo-plant-mobile@1x.jpg" width="280" height="280" alt="Фотография растения">
                 </a>
                 <div class="photo-gallery__item-info">
                   <div class="photo-gallery__caption">
@@ -68,7 +70,7 @@
               </article>
               <article class="photo-gallery__item">
                 <a class="photo-gallery__link" href="#" target="_blank">
-                  <img class="photo-gallery__item-image" src="./img/gallery-photo-road-2-mobile.jpg" width="280" height="280" alt="Фотография горной дороги">
+                  <img class="photo-gallery__item-image" src="./img/gallery-photo-road-2-mobile@1x.jpg" width="280" height="280" alt="Фотография горной дороги">
                 </a>
                 <div class="photo-gallery__item-info">
                   <div class="photo-gallery__caption">
@@ -82,7 +84,7 @@
               </article>
               <article class="photo-gallery__item">
                 <a class="photo-gallery__link" href="#" target="_blank">
-                  <img class="photo-gallery__item-image" src="./img/gallery-photo-bridge-mobile.jpg" width="280" height="280" alt="Фотография Моста Дьявола">
+                  <img class="photo-gallery__item-image" src="./img/gallery-photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Фотография Моста Дьявола">
                 </a>
                 <div class="photo-gallery__item-info">
                   <div class="photo-gallery__caption">
