--- a/source/index.html
+++ b/source/index.html
@@ -47,7 +47,7 @@
                 <h2 class="features__subtitle features__subtitle--blue-theme title">Настоящий городок</h2>
                 <p class="features__number">— №1 —</p>
                 <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
-                <img class="features__image" src="./img/photo-city.jpg" width="320" height="260" alt="Фото города Седона">
+                <img class="features__image" src="./img/photo-city-mobile@1x.jpg" width="320" height="260" alt="Фото города Седона">
                 <ul class="features__list-benefits benefits">
                   <li class="benefits__item benefits__item--house">
                     <h3 class="benefits__title title">Жилье</h3>
@@ -67,7 +67,7 @@
                 <h2 class="features__subtitle features__subtitle--blue-theme title">Там есть Мост Дьявола</h2>
                 <p class="features__number">— №2 —</p>
                 <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-                <img class="features__image features__image--other-order" src="./img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
+                <img class="features__image features__image--other-order" src="./img/photo-bridge-mobile@1x.jpg" width="320" height="260" alt="Фото Моста Дьявола">
               </li>
               <li class="features__item features__item--gray-theme">
                 <h2 class="features__subtitle features__subtitle--underline title">Небольшая площадь</h2>
