--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,6 +41,8 @@
               <article class="photo-gallery__item">
                 <a class="photo-gallery__link" href="#" target="_blank">
                   <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/gallery-photo-road-desktop@1x.jpg 1x, ./img/gallery-photo-road-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/gallery-photo-road-tablet@1x.jpg 1x, ./img/gallery-photo-road-tablet@2x.jpg 2x">
                     <img class="photo-gallery__item-image" src="./img/gallery-photo-road-mobile@1x.jpg" srcset="./img/gallery-photo-road-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография дороги">
                   </picture>
                 </a>
@@ -56,7 +58,11 @@
               </article>
               <article class="photo-gallery__item">
                 <a class="photo-gallery__link" href="#" target="_blank">
-                  <img class="photo-gallery__item-image" src="./img/gallery-photo-plant-mobile@1x.jpg" width="280" height="280" alt="Фотография растения">
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/gallery-photo-plant-desktop@1x.jpg 1x, ./img/gallery-photo-plant-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/gallery-photo-plant-tablet@1x.jpg 1x, ./img/gallery-photo-plant-tablet@2x.jpg 2x">
+                    <img class="photo-gallery__item-image" src="./img/gallery-photo-plant-mobile@1x.jpg" srcset="./img/gallery-photo-plant-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография растения">
+                  </picture>
                 </a>
                 <div class="photo-gallery__item-info">
                   <div class="photo-gallery__caption">
@@ -70,7 +76,11 @@
               </article>
               <article class="photo-gallery__item">
                 <a class="photo-gallery__link" href="#" target="_blank">
-                  <img class="photo-gallery__item-image" src="./img/gallery-photo-road-2-mobile@1x.jpg" width="280" height="280" alt="Фотография горной дороги">
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/gallery-photo-road-2-desktop@1x.jpg 1x, ./img/gallery-photo-road-2-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/gallery-photo-road-2-tablet@1x.jpg 1x, ./img/gallery-photo-road-2-tablet@2x.jpg 2x">
+                    <img class="photo-gallery__item-image" src="./img/gallery-photo-road-2-mobile@1x.jpg" srcset="./img/gallery-photo-road-2-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография горной дороги">
+                  </picture>
                 </a>
                 <div class="photo-gallery__item-info">
                   <div class="photo-gallery__caption">
@@ -84,7 +94,11 @@
               </article>
               <article class="photo-gallery__item">
                 <a class="photo-gallery__link" href="#" target="_blank">
-                  <img class="photo-gallery__item-image" src="./img/gallery-photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Фотография Моста Дьявола">
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/gallery-photo-bridge-desktop@1x.jpg 1x, ./img/gallery-photo-bridge-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/gallery-photo-bridge-tablet@1x.jpg 1x, ./img/gallery-photo-bridge-tablet@2x.jpg 2x">
+                    <img class="photo-gallery__item-image" src="./img/gallery-photo-bridge-mobile@1x.jpg" srcset="./img/gallery-photo-bridge-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография Моста Дьявола">
+                  </picture>
                 </a>
                 <div class="photo-gallery__item-info">
                   <div class="photo-gallery__caption">
