--- a/source/catalog.html
+++ b/source/catalog.html
@@ -119,9 +119,14 @@
                   <button class="video-presentation__button">
                     <span class="video-presentation__play">Воспроизвести</span>
                   </button>
-                  <video class="video-presentation__video-file" width="280" height="177" poster="./img/video-mobile.jpg">
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/video-desktop@1x.jpg 1x, ./img/video-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/video-tablet@1x.jpg 1x, ./img/video-tablet@2x.jpg 2x">
+                    <img class="video-presentation__video-file" src="./img/video-mobile@1x.jpg" srcset="./img/video-mobile@2x.jpg 2x" width="280" height="177" alt="Видеопрезентация о городе Седона">
+                  </picture>
+                  <!-- <video class="video-presentation__video-file" width="280" height="177" poster="./img/video-mobile.jpg">
                     "Your browser doesn`t support HTML5 video tag. "
-                  </video>
+                  </video> -->
               </div>
           </section>
       </main>
