Делает мобильное меню по умолчанию закрытым, редактирует поведение меню в потоке, чтобы избежать перестроения элементов при открытии/закрытии меню

--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
   <body class="page__body">
     <div class="page__wrapper">
       <header class="page-header">
-        <nav class="page-header__main-nav main-nav main-nav--opened main-nav--nojs">
+        <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs">
           <a class="main-nav__logo logo">
             <img class="logo__image" src="./img/logo.svg" width="185" height="96" alt="Логотип города Седона">
           </a>
