--- a/6/form.html
+++ b/6/form.html
@@ -149,17 +149,21 @@
       </footer>
     </div>
 
-    <section class="modal modal--warning">
-      <h2 class="modal__title title">Что-то пошло не так!</h2>
-      <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button class="modal__close-button button" type="button" aria-label="Закрыть окно">ОК</button>
+    <section class="modal modal--closed">
+      <div class="modal__wrapper modal__wrapper--warning">
+        <h2 class="modal__title title">Что-то пошло не так!</h2>
+        <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button class="modal__close-button button" type="button" aria-label="Закрыть окно">ОК</button>
+      </div>
     </section>
 
-    <section class="modal modal--information">
-      <h2 class="modal__title title">Ваш отзыв отправлен!</h2>
-      <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br>В ближайшее время мы опубликуем его на сайте</p>
-      <div class="modal__wrapper">
-        <button class="modal__close-button button" type="button">Закрыть окно</button>
+    <section class="modal modal--closed">
+      <div class="modal__wrapper modal__wrapper--information">
+        <h2 class="modal__title title">Ваш отзыв отправлен!</h2>
+        <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам.<br>В ближайшее время мы опубликуем его на сайте</p>
+        <div class="modal__box">
+          <button class="modal__close-button button" type="button">Закрыть окно</button>
+        </div>
       </div>
     </section>
 
