--- a/6/index.html
+++ b/6/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона</title>
     <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon-32.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon-180.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <base href="https://htmlacademy-adaptive.github.io/488659-sedona-26/6/">
 </head>
   <body class="page__body">
     <div class="page__wrapper">
       <header class="page-header">
-        <nav class="page-header__main-nav main-nav main-nav--opened main-nav--nojs">
+        <nav class="page-header__main-nav main-nav main-nav--closed main-nav--nojs">
           <a class="main-nav__logo logo">
             <img class="logo__image" src="./img/logo.svg" width="185" height="96" alt="Логотип города Седона">
           </a>
@@ -44,7 +48,9 @@
                 <h2 class="features__subtitle features__subtitle--blue-theme title">Настоящий городок</h2>
                 <p class="features__number">— №1 —</p>
                 <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
-                <img class="features__image" src="./img/photo-city.jpg" width="320" height="260" alt="Фото города Седона">
+                <picture>
+                  <img class="features__image" src="./img/photo-city-mobile@1x.jpg" width="320" height="260" alt="Фото города Седона">
+                </picture>
                 <ul class="features__list-benefits benefits">
                   <li class="benefits__item benefits__item--house">
                     <h3 class="benefits__title title">Жилье</h3>
@@ -64,7 +70,9 @@
                 <h2 class="features__subtitle features__subtitle--blue-theme title">Там есть Мост Дьявола</h2>
                 <p class="features__number">— №2 —</p>
                 <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-                <img class="features__image features__image--other-order" src="./img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
+                <picture>
+                  <img class="features__image features__image--other-order" src="./img/photo-bridge-mobile@1x.jpg" width="320" height="260" alt="Фото Моста Дьявола">
+                </picture>
               </li>
               <li class="features__item features__item--gray-theme">
                 <h2 class="features__subtitle features__subtitle--underline title">Небольшая площадь</h2>
