Собирает векторные изображения в спрайт и добавляет его на страницу

--- a/source/form.html
+++ b/source/form.html
@@ -123,25 +123,33 @@
           <p class="footer__hashtag"><b>#visitsedona</b></p>
           <ul class="footer__list social">
             <li class="social__item">
-              <a class="social__link social__link--vk" href="#">
-                <img class="social__icon social__icon--vk" src="./img/icon-vk.svg" width="24" height="14" alt="Vkontakte">
+              <a class="social__link social__link--vk" href="#" aria-label="Vkontacte">
+                <svg class="social__icon social__icon--vk" width="24" height="14">
+                  <use xlink:href="./img/sprite.svg#icon-vk"></use>
+                </svg>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link ssocial__link--telegram" href="#">
-                <img class="social__icon social__icon--telegram" src="./img/icon-telegram.svg" width="21" height="17.6" alt="Telegram">
+              <a class="social__link social__link--telegram" href="#" aria-label="Telegram">
+                <svg class="social__icon social__icon--telegram" width="22" height="18">
+                  <use xlink:href="./img/sprite.svg#icon-telegram"></use>
+                </svg>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--youtube" href="#" aria-label="Youtube">
-                <img class="social__icon social__icon--youtube" src="./img/icon-youtube.svg" width="20" height="14" alt="Youtube">
+                <svg class="social__icon social__icon--youtube" width="20" height="14">
+                  <use xlink:href="./img/sprite.svg#icon-youtube"></use>
+                </svg>
               </a>
             </li>
           </ul>
           <div class="footer__copyright copyright">
             <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
               Разработано
-              <img class="copyright__icon" src="./img/icon-htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy"></img>
+              <svg class="copyright__icon" width="27" height="34">
+                <use xlink:href="./img/sprite.svg#icon-htmlacademy"></use>
+              </svg>
             </a>
           </div>
         </div>
