Подключает изображения в формате WebP для первых двух фотографий на странице Каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,6 +41,10 @@
               <article class="photo-gallery__item">
                 <a class="photo-gallery__link" href="#" target="_blank">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="./img/gallery-photo-road-desktop@1x.webp 1x, ./img/gallery-photo-road-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="./img/gallery-photo-road-tablet@1x.webp 1x, ./img/gallery-photo-road-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="./img/gallery-photo-road-mobile@1x.webp 1x, ./img/gallery-photo-road-mobile@2x.webp 2x">
+
                     <source media="(min-width: 1200px)" srcset="./img/gallery-photo-road-desktop@1x.jpg 1x, ./img/gallery-photo-road-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="./img/gallery-photo-road-tablet@1x.jpg 1x, ./img/gallery-photo-road-tablet@2x.jpg 2x">
                     <img class="photo-gallery__item-image" src="./img/gallery-photo-road-mobile@1x.jpg" srcset="./img/gallery-photo-road-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография дороги">
@@ -51,7 +55,7 @@
                     <h2 class="photo-gallery__photo-name">Неродные просторы</h2>
                     <p class="photo-gallery__author-name">Автор фото: Борис</p>
                   </div>
-                  <a class="photo-gallery__like-link" href="#">
+                  <a class="photo-gallery__like-link" href="#" aria-label="Поставить лайк">
                     <svg class="photo-gallery__icon-like" width="23" height="21">
                       <use xlink:href="./img/sprite.svg#icon-like"></use>
                     </svg>
@@ -62,6 +66,10 @@
               <article class="photo-gallery__item">
                 <a class="photo-gallery__link" href="#" target="_blank">
                   <picture>
+                    <source type="image/webp" media="(min-width: 1200px)" srcset="./img/gallery-photo-plant-desktop@1x.webp 1x, ./img/gallery-photo-plant-desktop@2x.webp 2x">
+                    <source type="image/webp" media="(min-width: 768px)" srcset="./img/gallery-photo-plant-tablet@1x.webp 1x, ./img/gallery-photo-plant-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="./img/gallery-photo-plant-mobile@1x.webp 1x, ./img/gallery-photo-plant-mobile@2x.webp 2x">
+
                     <source media="(min-width: 1200px)" srcset="./img/gallery-photo-plant-desktop@1x.jpg 1x, ./img/gallery-photo-plant-desktop@2x.jpg 2x">
                     <source media="(min-width: 768px)" srcset="./img/gallery-photo-plant-tablet@1x.jpg 1x, ./img/gallery-photo-plant-tablet@2x.jpg 2x">
                     <img class="photo-gallery__item-image" src="./img/gallery-photo-plant-mobile@1x.jpg" srcset="./img/gallery-photo-plant-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография растения">
@@ -72,7 +80,7 @@
                     <h2 class="photo-gallery__photo-name">Местная растительность</h2>
                     <p class="photo-gallery__author-name">Автор фото: Сергей</p>
                   </div>
-                  <a class="photo-gallery__like-link" href="#">
+                  <a class="photo-gallery__like-link" href="#" aria-label="Поставить лайк">
                     <svg class="photo-gallery__icon-like" width="23" height="21">
                       <use xlink:href="./img/sprite.svg#icon-like"></use>
                     </svg>
@@ -93,7 +101,7 @@
                     <h2 class="photo-gallery__photo-name">Дорога на север</h2>
                     <p class="photo-gallery__author-name">Автор фото: Петр</p>
                   </div>
-                  <a class="photo-gallery__like-link" href="#">
+                  <a class="photo-gallery__like-link" href="#" aria-label="Поставить лайк">
                     <svg class="photo-gallery__icon-like" width="23" height="21">
                       <use xlink:href="./img/sprite.svg#icon-like"></use>
                     </svg>
@@ -114,7 +122,7 @@
                     <h2 class="photo-gallery__photo-name">Мост дьявола</h2>
                     <p class="photo-gallery__author-name">Автор фото: Антон</p>
                   </div>
-                  <a class="photo-gallery__like-link" href="#">
+                  <a class="photo-gallery__like-link" href="#" aria-label="Поставить лайк">
                     <svg class="photo-gallery__icon-like" width="23" height="21">
                       <use xlink:href="./img/sprite.svg#icon-like"></use>
                     </svg>
