--- a/source/index.html
+++ b/source/index.html
@@ -48,7 +48,9 @@
                 <p class="features__number">— №1 —</p>
                 <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
                 <picture>
-                  <img class="features__image" src="./img/photo-city-mobile@1x.jpg" width="320" height="260" alt="Фото города Седона">
+                  <source media="(min-width: 1200px)" srcset="./img/photo-city-desktop@1x.jpg 1x, ./img/photo-city-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="./img/photo-city-tablet@1x.jpg 1x, ./img/photo-city-tablet@2x.jpg 2x">
+                  <img class="features__image" src="./img/photo-city-mobile@1x.jpg" srcset="./img/photo-city-mobile@2x.jpg 2x" width="320" height="260" alt="Фото города Седона">
                 </picture>
                 <ul class="features__list-benefits benefits">
                   <li class="benefits__item benefits__item--house">
@@ -70,7 +72,9 @@
                 <p class="features__number">— №2 —</p>
                 <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
                 <picture>
-                  <img class="features__image features__image--other-order" src="./img/photo-bridge-mobile@1x.jpg" width="320" height="260" alt="Фото Моста Дьявола">
+                  <source media="(min-width: 1200px)" srcset="./img/photo-bridge-desktop@1x.jpg 1x, ./img/photo-bridge-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="./img/photo-bridge-tablet@1x.jpg 1x, ./img/photo-bridge-tablet@2x.jpg 2x">
+                  <img class="features__image features__image--other-order" src="./img/photo-bridge-mobile@1x.jpg" srcset="./img/photo-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Фотография Моста Дьявола">
                 </picture>
               </li>
               <li class="features__item features__item--gray-theme">
