Исправляет синтаксис для неразрывного пробела на Главной странице

--- a/source/index.html
+++ b/source/index.html
@@ -85,7 +85,7 @@
               <li class="features__item features__item--gray-theme">
                 <h2 class="features__subtitle features__subtitle--underline title">Красивая дорога</h2>
                 <p class="features__number">— №4 —</p>
-                <p class="features__description">Ехать в Седону из Лас-&nbspВегаса совсем не&nbspскучно!</p>
+                <p class="features__description">Ехать в Седону из Лас-&nbsp;Вегаса совсем не&nbsp;скучно!</p>
               </li>
               <li class="features__item features__item--gray-theme">
                 <h2 class="features__subtitle title">Мало туристов</h2>
