--- a/source/index.html
+++ b/source/index.html
@@ -67,7 +67,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="features__item features__item--blue-theme">
+              <li class="features__item features__item--blue-theme features__item--bridge">
                 <h2 class="features__subtitle features__subtitle--blue-theme title">Там есть Мост Дьявола</h2>
                 <p class="features__number">— №2 —</p>
                 <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
@@ -77,17 +77,17 @@
                   <img class="features__image" src="./img/photo-bridge-mobile@1x.jpg" srcset="./img/photo-bridge-mobile@2x.jpg 2x" width="320" height="260" alt="Фотография Моста Дьявола">
                 </picture>
               </li>
-              <li class="features__item features__item--gray-theme">
+              <li class="features__item features__item--gray-theme features__item--area">
                 <h2 class="features__subtitle features__subtitle--underline title">Небольшая площадь</h2>
                 <p class="features__number">— №3 —</p>
                 <p class="features__description">Все интересные места находятся очень близко</p>
               </li>
-              <li class="features__item features__item--gray-theme">
+              <li class="features__item features__item--gray-theme features__item--road">
                 <h2 class="features__subtitle features__subtitle--underline title">Красивая дорога</h2>
                 <p class="features__number">— №4 —</p>
                 <p class="features__description">Ехать в Седону из Лас-&nbsp;Вегаса совсем не&nbsp;скучно!</p>
               </li>
-              <li class="features__item features__item--gray-theme">
+              <li class="features__item features__item--gray-theme features__item--tourists">
                 <h2 class="features__subtitle title">Мало туристов</h2>
                 <p class="features__number">— №5 —</p>
                 <p class="features__description">Большинство едет в Гранд Каньон и толпится там</p>
