--- a/source/index.html
+++ b/source/index.html
@@ -98,7 +98,7 @@
         <section class="service">
           <div class="service__wrapper">
             <h2 class="service__title title">Заинтересовались?</h2>
-            <p class="service__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <p class="service__description">Укажите предполагаемые даты поездки,<br class="service__break"> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="service__find-hotel-link" href="#" target="_blank">Найти гостиницу</a>
           </div>
         </section>
